--- a/digitalschool-api/vercel.json
+++ b/digitalschool-api/vercel.json
@@ -15,6 +15,15 @@
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE",
         "Access-Control-Allow-Headers": "Content-Type, Custom-Header"
       }
+    },
+    {
+      "src": "/api/getlist",
+      "dest": "getlist.py",
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE",
+        "Access-Control-Allow-Headers": "Content-Type, Custom-Header"
+      }
     }
   ]
 }
